--- a/templates/3j.html
+++ b/templates/3j.html
@@ -239,6 +239,7 @@
        var i;
 
        init();
+       window.addEventListener( 'resize', onWindowResize, false );
        draw();
 
        document.getElementById('points').addEventListener('click', () => {
